@@ -165,6 +165,7 @@ static PySexpObject *globalEnv;
 static PySexpObject *baseNameSpaceEnv;
 static PySexpObject *emptyEnv;
 static PySexpObject *rpy_R_MissingArg;
+static PySexpObject *rpy_R_NilValue;
 
 static PyObject *rinterface_unserialize;
 
@@ -1052,6 +1053,7 @@ static PyObject* EmbeddedR_init(PyObject *self)
   RPY_SEXP(baseNameSpaceEnv) = R_BaseNamespace;
   RPY_SEXP(emptyEnv) = R_EmptyEnv;
   RPY_SEXP(rpy_R_MissingArg) = R_MissingArg;
+  RPY_SEXP(rpy_R_NilValue) = R_NilValue;
 
   errMessage_SEXP = findVar(install("geterrmessage"), 
                             R_BaseNamespace);
@@ -1938,7 +1940,7 @@ Sexp_call(PyObject *self, PyObject *args, PyObject *kwds)
       is_PySexpObject = PyObject_TypeCheck(argValue, &Sexp_Type);
       if (! is_PySexpObject) {
         if ( argValue == Py_None ) {
-          argValue = R_NilValue;
+          argValue = rpy_R_NilValue;
         } else {
           PyErr_Format(PyExc_ValueError, 
                        "All named parameters must be of type Sexp_Type or None");
@@ -3775,8 +3777,16 @@ initrinterface(void)
     Py_DECREF(rpy_R_MissingArg);
     return;
   }
-
   Py_DECREF(rpy_R_MissingArg);  
+
+  rpy_R_NilValue = (PySexpObject*)Sexp_new(&Sexp_Type,
+					   Py_None, Py_None);
+  if (PyDict_SetItemString(d, "R_NilValue", (PyObject *)rpy_R_NilValue) < 0)
+  {
+    Py_DECREF(rpy_R_NilValue);
+    return;
+  }
+  Py_DECREF(rpy_R_NilValue);  
 
   rinterface_unserialize = PyDict_GetItemString(d, "unserialize");
   
