@@ -100,6 +100,8 @@ New Features
 - Experimental function :func:`set_interactive` to set whether R is in interactive
   mode or not (#following an issue reported by Yaroslav Halchenko)
 
+- New object :data:`R_NilValue`, exposing R's special object for representing
+  a "NULL".
 
 :mod:`rpy2.rlike`:
 
